# polly_shop

./: .env.example  .gitignore  .gitlab-ci.yml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
api/: __main__.py  dto.py  utils.py
api/config/: default.py  utils.py
api/db/connection/: __init__.py  redis.py  session.py
api/db/migrator/: env.py
api/db/models/: __init__.py  base.py  role.py  user.py
api/endpoints/: __init__.py  health_check.py  tokens.py  users.py
api/repositories/: tokens.py  users.py
api/schemas/: __init__.py  tokens.py  users.py
api/services/: users.py
api/services/auth/: authentication.py  authorization.py  base.py  exc.py
api/services/jwt/: coders.py  exc.py  service.py  utils.py  verifier.py
api/utils/: __init__.py  core.py
tests/: conftest.py  utils.py
tests/test_handlers/: test_health_check.py
tests/test_migrations/: test_stairway.py
