[tool.poetry]
name = "polly_shop"
version = "0.1.0"
description = ""
authors = ["Nikita Vyukov <nvyukov456@gmail.com>"]

# DEPENDENCIES

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.9.1"
fastapi = "^0.78.0"
SQLAlchemy = "^1.4.39"
starlette = "^0.19.1"
SQLAlchemy-Utils = "^0.38.3"
alembic = "^1.8.1"
psycopg2-binary = "^2.9.3"
python-dotenv = "^0.21.0"
uvicorn = "^0.18.3"
asyncpg = "^0.26.0"
email-validator = "^1.2.1"
pytz = "^2022.4"
passlib = "^1.7.4"
orjson = "^3.8.3"
redis = "^4.4.0"
PyJWT = "^2.6.0"
python-multipart = "^0.0.5"

[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.20.3"
pytest = "^7.1.2"
mock = "^4.0.3"
httpx = "^0.23.0"
ConfigArgParse = "^1.5.3"
pytest-cov = "^3.0.0"
isort = "^5.10.1"
pylint = "^2.14.4"
mypy = "^0.961"
black = "^22.6.0"
sqlalchemy2-stubs = "^0.0.2-alpha.24"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# PYTEST

[tool.pytest]
addopts = "--cov=api --cov-report html:coverage-report-html --cov-fail-under=60"
python_files = "test_*.py"
python_classes = ["*Test", "Test*"]
python_functions = "test_*"
testpaths = "tests/"

[tool.coverage.report]
exclude_lines = [
    "# pragma: no cover",
    "def __repr__",
    "def __str__",
    "def __unicode__",
]
show_missing = true
skip_empty = true
omit = [
  "*/__init__.py",
  "api/db/migrator/env.py",
]

[tool.coverage.html]
directory = "pytest-cov-report"

[tool.coverage.run]
branch = true
concurrency = ['thread', 'greenlet']

[tool.pytest.ini_options]
asyncio_mode = "auto"

# LINTERS

[tool.pylint.master]
extension-pkg-allow-list = ["pydantic"]

[tool.pylint.format]
max-line-length = 120

[tool.pylint.basic]
good-names = ["db"]

[tool.pylint."MESSAGES CONTROL"]
disable = [
  "C0114",  # missing-module-docstring
  "C0116",  # missing-function-docstring
  "R0903",  # too-few-public-methods (for sqlalchemy tables and pydantic classes)
  "C0115",  # missing-class-docstring (for api routes)
  "C0103",  # invalid-name (for pydatic settings)
]

[tool.mypy]
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
ignore_missing_imports = false
no_implicit_optional = true
plugins = ["sqlalchemy.ext.mypy.plugin"]

[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.isort]
known_local_folder = "api"
lines_after_imports = 2
multi_line_output = 3
line_length = 120
include_trailing_comma = true
